--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,8 @@
 
 development:
   adapter: postgresql
-  database: road_trippers_development
+  database: trip_app_development
 
 test:
   adapter: postgresql
-  database: road_trippers_test
-
-
+  database: trip_app_test
